# Homework_2.12

./: README.md  main.py  pyproject.toml
migrations/versions/: 5981e20d90ba_seed.py  a4fdab8c1614_init.py  ace20197f995_init.py  fadb11f48e41_seed.py
src/: schemas.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py
